# pet-hotel-veterinary

./: .gitignore  README.adoc  manage.py  pyproject.toml
assets/: 2-logico.pu
assets/django-generated/: models.py
core/: admin.py  choices.py  models.py  signals.py  validators.py
core/.old/migrations/: 0003_delete_authgroup_delete_authgrouppermissions_and_more.py  0005_preciotest.py  0007_delete_preciotest.py  0009_delete_preciotest.py  0011_delete_doubleprimarykeytest.py
core/.old/templates/: base.html
core/.old/templates/administracion_veterinaria/: table_results.html
core/migrations/: 0001_initial.py
core/models/: __init__.py  accommodation.py  client.py  medical.py  pet.py  services.py
core/old_migrations/: 0001_initial.py  0002_authgroup_authgrouppermissions_authpermission_and_more.py  0004_calendariovacuna_delete_calendariovacunas.py  0006_preciotest_precio_currency_alter_preciotest_precio.py  0008_preciotest.py  0010_doubleprimarykeytest.py
core/old_templates/administracion_veterinaria/: error.html  query_table.html
docs/: main.tex
docs/LaTeX/: doc.lol  doc.tex
docs/assets/erd/: conceptual.pu  physical.pu
docs/src/: cobranza.py  ddl.sql  models.py  reporte-por-fechas.py
docs/typst/: main.typ  template.typ
pet_hotel_veterinary/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: reporte-por-periodo.py
sql/: ddl.sql  dml.sql  veterinaria.sql
